Creamos base de datos en clase

--- a/alternativo.html
+++ b/alternativo.html
@@ -82,23 +82,26 @@
 
 
 
-                                <div class="classynav">
-                                    <ul>  <li><a href="inicio.html">| Historia |</a></li>
-                                      <li><a href="#">| Música |</a>
-                                          <ul class="dropdown">
-                                              <li><a href="bandas.html">| Bandas |</a></li>
-                                              <li><a href="cantantes.html">| Cantantes |</a></li>
-                                              <li><a href="#">| Derivados | </a>
-                                                <ul class="dropdown">
-                                                    <li><a href="alternativo.html">|Alternativo|</a></li>
-                                                    <li><a href="pop.html">| Pop Rock |</a></li>
-                                                    <li><a href="español.html">|En Español |</a></li>  </ul>
-                                          </li>  </ul>  </li>
-                                    <li><a href="contacto.html">| Contacto |</a></li>
-                                      <li><a href="recomendaciones.html">| Recomendaciones |</a></li>
-                                  </ul>
+                               <div class="classynav">
+                                <ul>  <li><a href="inicio.html">| Inicio |</a></li>
+                                    <li><a href="contacto.html">| Empresa |</a></li>
 
-                                </div>
+                                  <li><a href="#">| Artículos |</a>
+                                      <ul class="dropdown">
+                                          <li><a href="bandas.html">|Cuidado |</a></li>
+                                          <li><a href="cantantes.html">| Tips |</a></li>
+                                          <li><a href="#">| Tipos | </a>
+                                            <ul class="dropdown">
+                                                <li><a href="alternativo.html">| Flores |</a></li>
+                                                <li><a href="pop.html">| Cactus |</a></li>
+                                                <li><a href="español.html">| Suculentas |</a></li>  </ul>
+                                      </li>  </ul>  </li>
+                                <li><a href="contacto.html">| Galeria |</a></li>
+                                <li><a href="contacto.html">| Productos |</a></li>
+                                  <li><a href="recomendaciones.html">| Carrito de compras |</a></li>
+                              </ul>
+
+                            </div>
                                 <!-- TERMINA EL NAV DEL MENÚ -->
                             </div>
                         </nav>
