Avance a base de datos

--- a/inicio.html
+++ b/inicio.html
@@ -100,7 +100,7 @@
                                                 <li><a href="español.html">| Suculentas |</a></li>  </ul>
                                       </li>  </ul>  </li>
                                 <li><a href="contacto.html">| Galeria |</a></li>
-                                <li><a href="contacto.html">| Productos |</a></li>
+                                <li><a href="productos.php">| Productos |</a></li>
                                   <li><a href="recomendaciones.html">| Carrito de compras |</a></li>
                               </ul>
 
