--- a/Cactus.html
+++ b/Cactus.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title> Recomendaciones</title>
+    <title> Inicio</title>
 
     <!-- ICONO EN LA PESTAÑA -->
     <link rel="icon" href="logooo.png">
