--- a/inicio.html
+++ b/inicio.html
@@ -45,7 +45,6 @@
                     <!-- AREA DE VINCULOS-->
                     <div class="col-12 col-sm-4">
                         <div class="top-social-area">
-                          <a href="#"> <a href="http://www.cbtis003.edu.mx/" data-toggle="tooltip" data-placement="bottom" title="Educación"><i class="fa fa-graduation-cap"  aria-hidden="true"></i></a>
                           <a href="#"> <a href="https://www.facebook.com/CBTIS03TLAX/?epa=SEARCH_BOX" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                           <a href="#"> <a href="https://www.youtube.com/playlist?list=PLpXiQWYQmh_yCJEJdsqLNsVnEMmTG_IzT" data-toggle="tooltip" data-placement="bottom" title="PlayList"><i class="fa fa-youtube-play	" aria-hidden="true"></i></a>
                           </div>
@@ -87,21 +86,22 @@
 
                             <div class="classynav">
                                 <ul>  <li><a href="inicio.html">| Inicio |</a></li>
-                                    <li><a href="contacto.html">| Empresa |</a></li>
+                                    <li><a href="Empresa.html">| Empresa |</a></li>
 
                                   <li><a href="#">| Artículos |</a>
                                       <ul class="dropdown">
-                                          <li><a href="bandas.html">|Cuidado |</a></li>
-                                          <li><a href="cantantes.html">| Tips |</a></li>
+                                          <li><a href="Cuidado.html">|Cuidado |</a></li>
+                                          <li><a href="Tips.html">| Tips |</a></li>
                                           <li><a href="#">| Tipos | </a>
                                             <ul class="dropdown">
-                                                <li><a href="alternativo.html">| Flores |</a></li>
-                                                <li><a href="pop.html">| Cactus |</a></li>
-                                                <li><a href="español.html">| Suculentas |</a></li>  </ul>
+                                                <li><a href="Flores.html">| Flores |</a></li>
+                                                <li><a href="Cactus.html">| Cactus |</a></li>
+                                                <li><a href="Suculentas.html">| Suculentas |</a></li>  </ul>
                                       </li>  </ul>  </li>
-                                <li><a href="contacto.html">| Galeria |</a></li>
-                                <li><a href="productos.php">| Productos |</a></li>
-                                  <li><a href="recomendaciones.html">| Carrito de compras |</a></li>
+                                  <li><a href="Galeria.html">| Galeria |</a></li>
+                                    <li><a href="#">| Productos |</a></li>
+                                    <li><a href="contacto.html">| Contacto |</a></li>
+
                               </ul>
 
                             </div>
@@ -396,41 +396,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="classy-nav-container breakpoint-off">
-                        <!-- MENU EN EL PIE DE PAGINA-->
-                        <nav class="classy-navbar justify-content-center">
-                            <div class="classy-navbar-toggler">
-                                <span class="navbarToggler"><span></span><span></span><span></span></span>
-                               </div>
-                             <div class="classy-menu">
-                                             <div class="classynav">
-                                <ul>  <li><a href="inicio.html">| Inicio |</a></li>
-                                    <li><a href="contacto.html">| Empresa |</a></li>
+                    <div class="classy-navbar justify-content-center">
 
-                                  <li><a href="#">| Artículos |</a>
-                                     </li>
-                                <li><a href="contacto.html">| Galeria |</a></li>
-                                <li><a href="contacto.html">| Productos |</a></li>
-                                  <li><a href="recomendaciones.html">| Carrito de compras |</a></li>
-                              </ul>
-
-                            </div>
-                                                           <!-- TERMINA EL MENU EN PIE DE PAGINA-->
-                            </div>
-                        </nav>
-                    </div>
                     <!-- VINCULOS EN PIE DE PAGINA-->
                     <div class="footer-social-area mt-30">
-                      <a href="#"> <a href="http://www.cbtis003.edu.mx/" data-toggle="tooltip" data-placement="bottom" title="Educación"><i class="fa fa-graduation-cap"  aria-hidden="true"></i></a>
                       <a href="#"> <a href="https://www.facebook.com/CBTIS03TLAX/?epa=SEARCH_BOX" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                       <a href="#"> <a href="https://www.youtube.com/playlist?list=PLpXiQWYQmh_yCJEJdsqLNsVnEMmTG_IzT" data-toggle="tooltip" data-placement="bottom" title="PlayList"><i class="fa fa-youtube-play	" aria-hidden="true"></i></a>
                       </div>
                 </div>
             </div>
         </div>
-
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Hecho por CBTIS 003 </a>
-<br> <br>
+<p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Hecho en México ;) | Tienda CACTUS
+<br> <br> <br>  </p> <br> 
     </footer>
     <!--TERMINA PIE DE PAGINA -->
 
