Cuidado y suculentas terminado

--- a/Empresa.html
+++ b/Empresa.html
@@ -91,7 +91,6 @@
                                   <li><a href="#">| Artículos |</a>
                                       <ul class="dropdown">
                                           <li><a href="Cuidado.html">|Cuidado |</a></li>
-                                          <li><a href="Tips.html">| Tips |</a></li>
                                           <li><a href="#">| Tipos | </a>
                                             <ul class="dropdown">
                                                 <li><a href="Flores.html">| Flores |</a></li>
@@ -156,10 +155,10 @@
                                 <p>Decidimos comenzar ésta pequeña empresa porque amamos lo que hacemos
                                   y que mejor que dedicarse a hacer lo que te gusta, ésto implica una
                                   pequeña fuente de ingreso para nosotros, esperemos que nuestro sitio
-                                  web sea de su agrado.
+                                  web sea de su agrado. <br> <br>
 
-                                  Creadores
-                                  Denisse Amalinali Flores Jiménez
+                                  Creadores: <br>
+                                  Denisse Amalinali Flores Jiménez <br>
                                   Luis Ronaldo Popocatl Pérez
                                 </p>
                             </div>
@@ -191,13 +190,7 @@
 </div>
 <!-- GALERIA DE INSTAGRAM-->
 <div class="instagram-slides owl-carousel">
-    <!-- *************-->
-    <div class="single-insta-feed">
-        <img src="i1jepg" alt="">
-        <div class="hover-effects">
-            <a href="#"> <a href="https://www.instagram.com/nali_jimm"  class="d-flex align-items-center justify-content-center"><i class="fa fa-instagram"></i></a>
-        </div>
-    </div>
+
     <!-- *************-->
     <div class="single-insta-feed">
         <img src="i2.jpeg" alt="">
