--- a/Galeria.html
+++ b/Galeria.html
@@ -91,7 +91,6 @@
                                   <li><a href="#">| Artículos |</a>
                                       <ul class="dropdown">
                                           <li><a href="Cuidado.html">|Cuidado |</a></li>
-                                          <li><a href="Tips.html">| Tips |</a></li>
                                           <li><a href="#">| Tipos | </a>
                                             <ul class="dropdown">
                                                 <li><a href="Flores.html">| Flores |</a></li>
@@ -546,13 +545,7 @@
 </div>
 <!-- GALERIA DE INSTAGRAM-->
 <div class="instagram-slides owl-carousel">
-    <!-- *************-->
-    <div class="single-insta-feed">
-        <img src="i1jepg" alt="">
-        <div class="hover-effects">
-            <a href="#"> <a href="https://www.instagram.com/nali_jimm"  class="d-flex align-items-center justify-content-center"><i class="fa fa-instagram"></i></a>
-        </div>
-    </div>
+
     <!-- *************-->
     <div class="single-insta-feed">
         <img src="i2.jpeg" alt="">
@@ -634,7 +627,7 @@ document.documentElement.scrollTop= 0;  } </script>
               </div>
         </div>
     </div>
-</div>
+</div> <br>
 <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Hecho en México ;) | Tienda CACTUS
 <br> <br> <br>  </p> <br>
