--- a/Cactus.html
+++ b/Cactus.html
@@ -84,7 +84,7 @@
 
 
                             <div class="classynav">
-                                <ul>  <li><a href="inicio.html">| Inicio |</a></li>
+                                <ul>  <li><a href="index.html">| Inicio |</a></li>
                                     <li><a href="Empresa.html">| Empresa |</a></li>
 
                                   <li><a href="#">| Artículos |</a>
