--- a/Empresa.html
+++ b/Empresa.html
@@ -85,7 +85,7 @@
 
 
                             <div class="classynav">
-                                <ul>  <li><a href="inicio.html">| Inicio |</a></li>
+                                <ul>  <li><a href="index.html">| Inicio |</a></li>
                                     <li><a href="Empresa.html">| Empresa |</a></li>
 
                                   <li><a href="#">| Artículos |</a>
