--- a/Flores.html
+++ b/Flores.html
@@ -90,6 +90,7 @@
                                   <li><a href="#">| Artículos |</a>
                                       <ul class="dropdown">
                                           <li><a href="Cuidado.html">|Cuidado |</a></li>
+                                            <li><a href="Tips.html">| Tutoriales |</a>
                                           <li><a href="#">| Tipos | </a>
                                             <ul class="dropdown">
                                                 <li><a href="Flores.html">| Flores |</a></li>
@@ -97,7 +98,7 @@
                                                 <li><a href="Suculentas.html">| Suculentas |</a></li>  </ul>
                                       </li>  </ul>  </li>
                                   <li><a href="Galeria.html">| Galeria |</a></li>
-                                    <li><a href="#">| Productos |</a></li>
+                                    <li><a href="http://dev-productostc.pantheonsite.io/">| Productos |</a></li>
                                     <li><a href="contacto.html">| Contacto |</a></li>
 
                               </ul>
