Transiciones de página

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="Tienda web de CACTUS" content="Es una tienda online para venta de cactus, suculentas y flores">
+    <meta name="Tienda web de CACTUS" content="Contacto con los dueños">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,7 +17,12 @@
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script type="text/javascript">
+   $(document).ready(function(){
+   $('body').hide();
+   $('body').fadeIn(4500);
+   });
+   </script>
 </head>
 
 <body>
